--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,7 @@ gradle-app.setting
 
 # # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
 # gradle/wrapper/gradle-wrapper.properties
+cache/cache.json
+cache/cacheLock
+config.json
+overrides/list.json
