--- a/.github/workflows/BuildOnRelease.yml
+++ b/.github/workflows/BuildOnRelease.yml
@@ -1,38 +1,39 @@
-name: Build On Release
-
+name: "Build On Release"
 on:
   release:
-    types: 
-      - created
-
+    types: created
   workflow_dispatch:
-
 jobs:
-  gradle:
-    strategy:
-      matrix:
-        os: [ubuntu-latest]
-    runs-on: ${{ matrix.os }}
+  build:
+    name: Build
+    runs-on: ubuntu-latest
     steps:
-    
-    - name: Checkout repository
-    - uses: actions/checkout@v2
-      with:
-        fetch-depth: 1
-    
-    - name: Setup JDK
-    - uses: actions/setup-java@v2
-      with:
-        java-version: 8
-        
-    - name: Build
-    - uses: gradle/gradle-build-action@v2
-      with:
-        arguments: build
-        gradle-version: wrapper
-    
-    - name: Artifact
-      uses: actions/upload-artifact@v2
-      with:
-        name: CursedBot
-        path: build/libs/CursedBot-2.0.0-all.jar
+      - name: 'Checkout repository'
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 1
+      - name: 'Cache'
+        uses: actions/cache@v2
+        with:
+          path: |
+            ~/.m2
+            ~/.gradle
+          key: ${{ runner.os }}-gradle-${{ hashFiles('build.gradle') }}
+      - name: 'Setup Java'
+        uses: actions/setup-java@v1
+        with:
+          java-version: 8
+          java-package: jdk
+      - name: Get tag version
+        id: tag_version
+        uses: battila7/get-version-action@v2
+      - name: 'Build'
+        uses: gradle/gradle-build-action@v2
+        with:
+          arguments: build
+          gradle-version: wrapper
+      - name: Artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: 'CursedBot'
+          path: "build/libs/CursedBot-${{ steps.tag_version.outputs.version-without-v }}.jar"
