--- a/.github/workflows/BuildOnRelease.yml
+++ b/.github/workflows/BuildOnRelease.yml
@@ -8,10 +8,15 @@ jobs:
     name: Build
     runs-on: ubuntu-latest
     steps:
+    
       - name: 'Checkout repository'
         uses: actions/checkout@v2
         with:
           fetch-depth: 1
+          
+      - name: Validate Gradle wrapper
+        uses: gradle/wrapper-validation-action@v1.0.4
+        
       - name: 'Cache'
         uses: actions/cache@v2
         with:
@@ -19,19 +24,21 @@ jobs:
             ~/.m2
             ~/.gradle
           key: ${{ runner.os }}-gradle-${{ hashFiles('build.gradle') }}
+          
       - name: 'Setup Java'
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v2.3.1
         with:
-          java-version: 8
-          java-package: jdk
+          java-version: '8'
+          
       - name: Get tag version
         id: tag_version
         uses: battila7/get-version-action@v2
+        
       - name: 'Build'
         uses: gradle/gradle-build-action@v2
         with:
           arguments: build
-          gradle-version: wrapper
+          
       - name: Artifact
         uses: actions/upload-artifact@v2
         with:
