--- a/.github/workflows/BuildOnRelease.yml
+++ b/.github/workflows/BuildOnRelease.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           fetch-depth: 1
           
-      - name: Validate Gradle wrapper
+      - name: 'Validate Gradle wrapper'
         uses: gradle/wrapper-validation-action@v1.0.4
         
       - name: 'Cache'
@@ -29,8 +29,10 @@ jobs:
         uses: actions/setup-java@v2.3.1
         with:
           java-version: '8'
+          distribution: 'temurin'
+          cache: 'gradle'
           
-      - name: Get tag version
+      - name: 'Get tag version'
         id: tag_version
         uses: battila7/get-version-action@v2
         
