--- a/.github/workflows/BuildOnRelease.yml
+++ b/.github/workflows/BuildOnRelease.yml
@@ -39,7 +39,9 @@ jobs:
       - name: 'Build'
         uses: gradle/gradle-build-action@v2
         with:
+          gradle-version: current
           arguments: build
+          
           
       - name: Artifact
         uses: actions/upload-artifact@v2
