--- a/.github/workflows/BuildOnRelease.yml
+++ b/.github/workflows/BuildOnRelease.yml
@@ -8,45 +8,48 @@ jobs:
     name: Build
     runs-on: ubuntu-latest
     steps:
-    
-      - name: 'Get tag version'
-        id: tag
-        uses: battila7/get-version-action@v2
-        
-      - name: 'Echo Tag Output'  
-        run: echo ${{ steps.tag.outputs.version-without-v }}
-    
+
       - name: 'Checkout repository'
         uses: actions/checkout@v2.4.0
         with:
-          ref: ${{ steps.tag.outputs.version-without-v }}
+          fetch-depth: 0
+
+      - name: 'Get tag'
+        id: tag
+        uses: "WyriHaximus/github-action-get-previous-tag@v1"
+        with:
+          fallback: 1.0.0
+        env:
+          TAG: ${{ steps.tag.outputs.tag }}
           
+      - name: 'Echo Tag'
+        run: echo "$TAG"
+
       - name: 'Validate Gradle wrapper'
         uses: gradle/wrapper-validation-action@v1.0.4
-        
+
       - name: 'Cache'
         uses: actions/cache@v2
         with:
           path: |
             ~/.gradle
           key: ${{ runner.os }}-gradle-${{ hashFiles('build.gradle') }}
-          
+
       - name: 'Setup Java'
         uses: actions/setup-java@v2.3.1
         with:
           java-version: '8'
           distribution: 'temurin'
           cache: 'gradle'
-        
+
       - name: 'Build'
         uses: gradle/gradle-build-action@v2
         with:
           gradle-version: current
           arguments: build
-          
-          
+
       - name: Artifact
         uses: actions/upload-artifact@v2
         with:
           name: 'CursedBot'
-          path: "build/libs/CursedBot-${{ steps.tag.outputs.version-without-v }}.jar"
+          path: "build/libs/CursedBot-${{ steps.tag.outputs.tag }}.jar"
