--- a/.github/workflows/BuildOnRelease.yml
+++ b/.github/workflows/BuildOnRelease.yml
@@ -19,11 +19,10 @@ jobs:
         uses: "WyriHaximus/github-action-get-previous-tag@v1"
         with:
           fallback: 1.0.0
-        env:
-          TAG: ${{ steps.tag.outputs.tag }}
           
       - name: 'Echo Tag'
-        run: echo "$TAG"
+        run: |
+          echo "tag=${{ steps.tag.outputs.tag }}" >> $GITHUB_ENV
 
       - name: 'Validate Gradle wrapper'
         uses: gradle/wrapper-validation-action@v1.0.4
@@ -52,4 +51,4 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: 'CursedBot'
-          path: "build/libs/CursedBot-${{ steps.tag.outputs.tag }}.jar"
+          path: "build/libs/CursedBot-${{ env.tag }}.jar"
